# dutch-climate-data

./: .gitignore  pyproject.toml  update_monthly_rainfall.py  update_monthly_weather.py  update_rainfall.py  update_rainfall_test.py  update_temperatures.py  update_temperatures_test.py  update_yearly_weather.py  update_yearly_weather_test.py
.github/workflows/: monthly-weather.action.yml  rainfall.action.yml  temperature.action.yml  tests.action.yml  weather.action.yml  yearly-weather.action.yml
co2/: co2_annmean_mlo.txt  co2_level.ipynb
data/: co2_levels.json  monthly-weather-data.json  rainfall-heatmap.json  rainfall.json  sealevels.json  temperature-anomalies.json  temperature-heatmap.json  weather-heatmap.json  weather.json  yearly-weather-data.json
mocks/: mndgeg_260_tg.txt
sealevel/: GMSL_TPJAOS_5.1_199209_202307.txt  update_sea_level.ipynb
